slides parcialmente prontos

--- a/2013-2/.gitignore
+++ b/2013-2/.gitignore
@@ -12,13 +12,11 @@
 *.bst
 
 # Images and other files
-*.jpg
 *.bm
-*.png
 *.gif
-*.eps
 *.blg
 *.ps
+resources/exemplos/*
 
 # LibreOffice lock file
 *\#
