compilacao dos slides abre evince em background redirecionando output to null (ou deveria)

--- a/2014-1/Makefile
+++ b/2014-1/Makefile
@@ -1,7 +1,7 @@
 run: slides pdf
 
 slides: slides_linux_2014-1.tex
-	latex slides_linux_2014-1.tex && dvips slides_linux_2014-1.dvi && ps2pdf slides_linux_2014-1.ps && evince slides_linux_2014-1.pdf
+	latex slides_linux_2014-1.tex && dvips slides_linux_2014-1.dvi && ps2pdf slides_linux_2014-1.ps && evince slides_linux_2014-1.pdf& > /dev/null
 
 pdf: handout_linux_2014-1.tex
 	pdflatex handout_linux_2014-1.tex && bibtex handout_linux_2014-1.aux && pdflatex handout_linux_2014-1.tex && pdflatex handout_linux_2014-1.tex
